--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@ United States (English)</a>
     </section>
 
 
-    <section id="support">
+     <section id="support">
         <div class="container ">
-            <div class=" change-support-ui row text-center">
+            <div class=" change-support-ui row">
                 <div class="col-12">
                     <h1 class=" mt-40 major-font-blue abril-fatface"> ACN Premium Technical Support</h1>
                 </div>
@@ -245,18 +245,20 @@ United States (English)</a>
                     <h4 class="">Get 24/7 support for smart devices, tablets, computers and connected devices. </h4>
                 </div>
                 <div class="col-12">
-                    <div class=" set-line-height row">
-                        <div class="col-12 col-md-6 col-lg-12 col-sm-6 ">
-                            <p>Connect new smart devices</p>
-                            <p>Speed up sluggish computers</p>
-                            <p>Detect and remove viruses, spyware and malware</p>
+                    <ul class=" set-line-height row">
+                        <div class="col-12 col-md-6 col-lg-12 col-sm-6">
+                            <li class="">Connect new smart devices</li>
+                            <li class="">Speed up sluggish computers</li>
+                            <li class="">Detect and remove viruses, spyware and malware</li>
                         </div>
                         <div class="col-12 col-md-6  col-lg-12 col-sm-6">
-                            <p>Help connect devices to your Wi-Fi</p>
-                            <p>Install software apps</p>
-                            <p>Troubleshoot problems and crashes</p>
+                            <li class="">Help connect devices to your Wi-Fi</li>
+                            <li class="">Install software apps</li>
+                            <li class="">Troubleshoot problems and crashes</li>
                         </div>
-                        </div>
+
+
+                    </ul>
                 </div>
 
                 <div class="col-12">
@@ -265,7 +267,7 @@ United States (English)</a>
             </div>
 
             <div class="row ">
-                <div class="col-12 text-center">
+                <div class="col-12 ">
                     <button type="button" class=" mt-4 btn order-now-btn mb-40 btn-shadow "> Order Now </button>
                 </div>
             </div>
